--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -3,14 +3,16 @@
     padding: 0;
 }
 
-header,footer {
+header,
+footer {
     width: 100%;
     height: 120px;
     background-color: blue;
     color: white;
 }
 
-h1,h2 {
+h1,
+h2 {
     text-align: center;
 }
 
@@ -32,7 +34,7 @@ p {
     font-size: 30px;
 }
 
-.card{
+.card {
     width: 80%;
     margin: 40px auto;
     border: 5px solid gray;
