--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -3,16 +3,14 @@
     padding: 0;
 }
 
-header,
-footer {
+header,footer {
     width: 100%;
     height: 120px;
     background-color: blue;
     color: white;
 }
 
-h1,
-h2 {
+h1,h2 {
     text-align: center;
 }
 
